2005-02-02  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/security/auth/callback/Callback.java,
	libraries/javalib/javax/security/auth/callback/CallbackHandler.java,
	libraries/javalib/javax/security/auth/callback/ChoiceCallback.java,
	libraries/javalib/javax/security/auth/callback/ConfirmationCallback.java,
	libraries/javalib/javax/security/auth/callback/LanguageCallback.java,        
	libraries/javalib/javax/security/auth/callback/NameCallback.java,
	libraries/javalib/javax/security/auth/callback/PasswordCallback.java,        
	libraries/javalib/javax/security/auth/callback/TextInputCallback.java,
	libraries/javalib/javax/security/auth/callback/TextOutputCallback.java,
	libraries/javalib/javax/security/auth/callback/UnsupportedCallbackException.java,
	libraries/javalib/javax/security/auth/login/AccountExpiredException.java,
	libraries/javalib/javax/security/auth/login/AppConfigurationEntry.java,
	libraries/javalib/javax/security/auth/login/CredentialExpiredException.java,
	libraries/javalib/javax/security/auth/login/FailedLoginException.java,
	libraries/javalib/javax/security/auth/login/LoginException.java,
        libraries/javalib/javax/security/cert/CertificateEncodingException.java:
	Resynced with GNU Classpath: fixed the diffs caused by 
	classpath's coding style.

2005-02-02  Dalibor Topic  <robilad@kaffe.org>

        * libraries/javalib/javax/security/auth/AuthPermission.java,
	libraries/javalib/javax/security/auth/DestroyFailedException.java,
        libraries/javalib/javax/security/auth/Destroyable.java,
        libraries/javalib/javax/security/auth/Policy.java,
	libraries/javalib/javax/security/auth/RefreshFailedException.java,
        libraries/javalib/javax/security/auth/Refreshable.java,
	libraries/javalib/javax/security/auth/SubjectDomainCombiner.java,
        libraries/javalib/javax/security/auth/callback/Callback.java,
	libraries/javalib/javax/security/auth/callback/CallbackHandler.java,