@@ -16,6 +16,14 @@ if ENABLE_JVMPI
 libjvmpi = ../jvmpi/libkaffejvmpi.la
 endif
 
+if COND_KAFFE_X_AWT
+INCLUDE_KAFFE_X_AWT = -DKAFFE_X_AWT_INCLUDED
+endif
+
+if COND_KAFFE_QT_AWT
+INCLUDE_KAFFE_QT_AWT = -DKAFFE_QT_AWT_INCLUDED
+endif
+
 AM_CPPFLAGS = \
 	-I../kaffevm \
 	-I$(srcdir)/../kaffevm \
@@ -23,7 +31,8 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/kaffe/jvmpi \
 	-I$(top_srcdir)/kaffe/xprof \
 	-I$(top_srcdir)/kaffe/kaffevm/jni \
-	-I$(top_builddir)/include
+	-I$(top_builddir)/include \
+	$(INCLUDE_KAFFE_X_AWT) $(INCLUDE_KAFFE_QT_AWT)
 
 kaffe_bin_SOURCES = \
 	main.c \
