@@ -1,3 +1,13 @@
+2005-02-02  Jim Huang  <jserv@kaffe.org>
+
+	* kaffe/kaffe/Makefile.am,
+	kaffe/kaffe/Makefile.in,
+	kaffe/kaffe/main.c,
+	po/fr.po,
+	po/kaffe.pot,
+	po/zh_TW.po:
+	Remove redundant Kaffe xlib and qt AWT implementation options.
+
 2005-02-02  Dalibor Topic  <robilad@kaffe.org>
 
 	* libraries/javalib/javax/security/auth/callback/Callback.java,
